--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongoose": "^7.3.1",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0"
   }
