--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,11 @@
     "server": "nodemon server"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.1",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0"
