--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "node-fetch": "^3.3.1",
     "nodemon": "^2.0.20",
     "openai": "^3.1.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
     "winston": "^3.9.0",
     "winston-mongodb": "^5.1.1"
   }
