--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon server"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
